<resources>
    <string name="app_name">Cal App</string>
    <string name="project_name">Calories care</string>
    <string name="error_not_found">ไม่พบรายการ</string>
    <string name="error_fill_text">This field is require</string>
    <string name="error_selected">please selected</string>

    <!-- Button -->
    <string name="button_ok">ตกลง</string>
    <string name="button_cancel">ยกเลิก</string>
    <string name="button_end">จบการทำงาน</string>
    <string name="button_recommend_food">แนะนำวิธีการับประทานอาหาร</string>
    <string name="button_recommend_exercise">แนะนำวิธีการออกกำลังกาย</string>

    <!-- Title tool bar -->
    <string name="title_toolbar_user_info">กรุณากรอกข้อมูล</string>
    <string name="title_toolbar_food_and_drink_list">รายการอาหารและเครื่องดื่ม</string>
    <string name="title_toolbar_food_and_drink">อาหารและเครื่องดื่ม</string>
    <string name="title_toolbar_calculation_result">ผลการคำนวณ</string>
    <string name="title_toolbar_exercise">รายการกิจกรรม</string>
    <string name="title_toolbar_food">รายการอาหาร</string>
    <string name="title_toolbar_exercise_all">กิจกรรม</string>
    <string name="title_toolbar_recommend_exercise">แนะนำการออกกำลังกาย</string>

    <!-- Dialog -->
    <string name="dialog_delete">คุณแน่ใจที่จะลบรายการนี้ ?</string>
    <string name="dialog_end">จบการทำงาน ?</string>

    <!-- Select gender -->
    <string name="select_gender">กรุณาเลือกเพศ</string>
    <string name="select_gender_remark">หมายเหตุ การเลือกเพศมีผลต่อการคำนวณ</string>

    <!-- User info -->
    <string name="user_info_weight">น้ำหนัก</string>
    <string name="user_info_height">ส่วนสูง</string>
    <string name="user_info_age">อายุ</string>
    <string name="user_info_religion">ศาสนา</string>
    <string name="user_info_food_allergy">อาหารที่แพ้</string>
    <string name="user_info_activity">ความหนักหน่วงของกิจกรรม</string>
    <string name="user_info_exercise">พฤติกรรมการออกกำลังกาย</string>
    <string name="user_info_pork">หมู</string>
    <string name="user_info_chicken">ไก่</string>
    <string name="user_info_shrimp">กุ้ง</string>
    <string name="user_info_crab">ปู</string>
    <string name="user_info_milk">นม</string>

    <string-array name="religion_list">
        <item>เลือกศาสนา</item>
        <item>พุทธ</item>
        <item>อิสลาม</item>
    </string-array>

    <string-array name="activity_list">
        <item>เลือก</item>
        <item>เบา</item>
        <item>ปานกลาง</item>
        <item>หนัก</item>
    </string-array>

    <string-array name="exercise_list">
        <item>เลือก</item>
        <item>ไม่ได้ออกกำลังกายเลย</item>
        <item>ประมาณอาทิตย์ละ 1-3 วัน</item>
        <item>ประมาณอาทิตย์ละ 3-5 วัน</item>
        <item>ประมาณอาทิตย์ละ 6-7 วัน</item>
        <item>ทุกวันเช้าเย็น</item>

    </string-array>

    <!-- Food and drink -->
    <string name="food_and_drink_calorie">จำนวนแคลลอรี่รวม</string>
    <string name="food_and_drink_kg_calorie">กิโลแคลลอรี่</string>
    <string name="food_and_drink_calorie_per_unit" formatted="false">%d แคลลอรี่ ต่อ %s</string>
    <string name="food_and_drink_category">เลือกหมวด</string>
    <string name="food_and_drink_type">ประเภท</string>

    <string-array name="cateyory_list">
        <item>เลือกหมวด</item>
        <item>อาหาร</item>
        <item>เครื่องดื่ม</item>
    </string-array>

    <string-array name="type_of_food_list">
        <item>ประเภท</item>
        <item>ทั้งหมด</item>
        <item>ไก่</item>
        <item>กุ้ง</item>
        <item>หมู</item>
        <item>ปู</item>
    </string-array>

    <string-array name="type_of_drink_list">
        <item>ประเภท</item>
        <item>ทั้งหมด</item>
        <item>น้ำ</item>
        <item>โยเกิร์ต</item>
        <item>นม</item>
    </string-array>

    <!-- Calculator result -->
    <string name="calculator_result_age">อายุ %d</string>
    <string name="calculator_result_weight">น้ำหนัก %d</string>
    <string name="calculator_result_height">ส่วนสูง %d</string>
    <string name="calculator_result_religion">ศาสนา %s</string>
    <string name="calculator_result_bmr">พลังงานที่ร่างกายต้องการในแต่ละวัน (BMR) : %,.2f</string>
    <string name="calculator_result_tdee">พลังงานที่ร่างกายสามารถใช้หมดได้ในแต่ละวัน (TDEE) : %,.2f</string>
    <string name="calculator_result_calorie">แคลลอรี่รวมของอาหารและเครื่องดื่มที่ผู้ใช้รับประทานไป : %d</string>
    <string name="calculator_result_result">ผลลัพธ์ : %s</string>
    <string name="calculator_result_fat">อ้วน</string>
    <string name="calculator_result_thin">ผอม</string>
    <string name="calculator_result_slim">สมส่วน</string>

    <!-- Recommend exercise -->
    <string name="exercise_selected">จำนวนกิจกรรมที่เลือก %d กิจกรรม</string>
    <string name="exercise_need_used">จำนวนแคลลอรี่ที่ต้องเผาผลาญ %d กิโลแคลลอรี่</string>
    <string name="exercise_calorie_per_hour">เผาผลาญ %d แคลลอรี่ ต่อ 1 ชั่วโมง</string>
    <string name="exercise_heavyness">ความหนักหน่วงของกิจกรรม</string>
    <string name="exercise_recommend">คำแนะนำ : ผู้ใช้ควรออกกำลังกาย %d นาที</string>

    <string-array name="heavyness_list">
        <item>ทั้งหมด</item>
        <item>เบา</item>
        <item>ปานกลาง</item>
        <item>หนัก</item>
    </string-array>

    <!-- Recommend food -->
    <string name="recommend_food_need">จำนวนแคลลอรี่ที่ต้องรับประทานเพิ่ม %d กิโลเคลลอรี่</string>
    <string name="recommend_food_selected">จำนวนแคลลอรี่ของอาหารและเครื่องดื่มที่เลือก %d กิโลเคลลอรี่</string>
    <string name="recommend_food_status">สถานะ : %s</string>
    <string name="recommend_food_status_more">ยังทานเพิ่มได้อีกนะ</string>
    <string name="recommend_food_status_good">กำลังดีเลย</string>
    <string name="recommend_food_status_max">แคลเกินแล้วนะ</string>


</resources>
