<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/mToolBar"
        layout="@layout/tool_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_yellow_dark"
                android:gravity="center"
                android:padding="@dimen/padding_normal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_female" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_small">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_info_age"
                        android:textColor="@color/color_text_black"
                        android:textSize="@dimen/text_normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_info_weight"
                        android:textColor="@color/color_text_black"
                        android:textSize="@dimen/text_normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_info_height"
                        android:textColor="@color/color_text_black"
                        android:textSize="@dimen/text_normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_info_religion"
                        android:textColor="@color/color_text_black"
                        android:textSize="@dimen/text_normal" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_normal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_mini"
                    android:text="@string/calculator_result_bmr"
                    android:textSize="@dimen/text_small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_mini"
                    android:text="@string/calculator_result_tdee"
                    android:textSize="@dimen/text_small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_mini"
                    android:text="@string/calculator_result_used"
                    android:textSize="@dimen/text_small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_mini"
                    android:text="@string/calculator_result_result"
                    android:textSize="@dimen/text_normal"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_black"
        android:clickable="true"
        android:gravity="center"
        android:onClick="okButton"
        android:padding="@dimen/padding_small"
        android:text="@string/button_ok"
        android:textColor="@color/color_white"
        android:textSize="@dimen/text_normal" />
</LinearLayout>