<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/mToolBar"
        layout="@layout/tool_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textviewNotFound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/padding_small"
                android:text="@string/error_not_found"
                android:textSize="@dimen/text_small"
                android:visibility="gone" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_yellow"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/padding_mini">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_and_drink_calorie"
            android:textSize="@dimen/text_small" />

        <TextView
            android:id="@+id/textviewCalorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="0"
            android:paddingLeft="@dimen/padding_small"
            android:paddingRight="@dimen/padding_small"
            android:textColor="@color/color_text_span"
            android:textColorHint="@color/color_text_span"
            android:textSize="@dimen/text_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_and_drink_kg_calorie"
            android:textSize="@dimen/text_small" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_black"
        android:clickable="true"
        android:gravity="center"
        android:onClick="okButton"
        android:padding="@dimen/padding_small"
        android:text="@string/button_ok"
        android:textColor="@color/color_white"
        android:textSize="@dimen/text_normal" />

</LinearLayout>
