<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include
        android:id="@id/mToolBar"
        layout="@layout/tool_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_xxxlarge">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_mini">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small"
                    android:text="@string/user_info_weight"
                    android:textSize="@dimen/text_small" />

                <EditText
                    android:id="@+id/edittextWeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border_gray_corner_small"
                    android:inputType="number"
                    android:maxLength="3"
                    android:padding="@dimen/padding_mini" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_mini">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small"
                    android:text="@string/user_info_height"
                    android:textSize="@dimen/text_small" />

                <EditText
                    android:id="@+id/edittextHeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border_gray_corner_small"
                    android:inputType="number"
                    android:maxLength="3"
                    android:padding="@dimen/padding_mini" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_mini">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small"
                    android:text="@string/user_info_age"
                    android:textSize="@dimen/text_small" />

                <EditText
                    android:id="@+id/edittextAge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border_gray_corner_small"
                    android:inputType="number"
                    android:maxLength="3"
                    android:padding="@dimen/padding_mini" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_mini">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small"
                    android:text="@string/user_info_religion"
                    android:textSize="@dimen/text_small" />

                <EditText
                    android:id="@+id/edittextReligion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border_gray_corner_small"
                    android:inputType="text"
                    android:padding="@dimen/padding_mini" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_mini">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small"
                    android:text="@string/user_info_activity"
                    android:textSize="@dimen/text_small" />

                <EditText
                    android:id="@+id/edittextActivity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border_gray_corner_small"
                    android:inputType="text"
                    android:padding="@dimen/padding_mini" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_mini">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small"
                    android:text="@string/user_info_exercise"
                    android:textSize="@dimen/text_small" />

                <EditText
                    android:id="@+id/edittextExercise"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border_gray_corner_small"
                    android:inputType="text"
                    android:padding="@dimen/padding_mini" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_black"
        android:clickable="true"
        android:gravity="center"
        android:onClick="okButton"
        android:padding="@dimen/padding_small"
        android:text="@string/button_ok"
        android:textColor="@color/color_white"
        android:textSize="@dimen/text_normal" />

</LinearLayout>